--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -23,12 +23,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install black isort flake8
 
-      - - name: Run black
-          run: black --check --diff --line-length 88 $(git ls-files '*.py')
-
+      - name: Run Black
+        run: black --check --diff --line-length 88 $(git ls-files '*.py')
 
       - name: Run Isort
-        run: isort --check-only --diff .
+        run: isort --check-only --diff --line-length 88 .
 
       - name: Run Flake8
-        run: flake8 .
+        run: flake8 --max-line-length=88 --extend-ignore=E203,W503 .
